[package]
name = "mirage"
description = "Moddable online rpg"
version = "0.1.0"
authors = ["Bryce \"BtheDestroyer\" Dixon <pokemonbrycedixon@gmail.com>"]
homepage = "https://github.com/bthedestroyer/Mirage"
repository = "https://github.com/bthedestroyer/Mirage"
keywords = ["game", "rpg", "networked", "online"]

[dependencies]
piston_window = "0.80.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.24.0"
piston2d-sprite = "0.45.0"
image = "0.19.0"
piston2d-drag_controller = "0.22.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
vecmath = "0.3.0"
camera_controllers = "0.24.0"
rand = "0.5.0"
shader_version = "0.3.0"
